--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,9 @@ node_modules/
 
 #ignoring migrations
 mmb_repo/users/migrations/*
+mmb_repo/bands/migrations/
 mmb_repo/mmb_data/migrations/*
 mmb_repo/mmb_logic/migrations/*
-mmb_repo/bands/migrations/*
 mmb_repo/media/songs/*
 mmb_repo/media/audio/*
 
