get_create, fixes

--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,4 @@ mmb_repo/mmb_data/migrations/*
 mmb_repo/mmb_logic/migrations/*
 mmb_repo/media/songs/*
 mmb_repo/media/audio/*
-
+mmb_repo/static/images/profile/*
